# ClinCast

./: .gitignore  LICENSE  README.md  pyproject.toml
.claude/: launch.json
api/: main.py
api/routes/: calibrate.py  inject.py  presets.py  simulate.py  upload.py
api/schemas/: request.py  response.py
api/services/: evidence.py  simulation.py
clincast/: __init__.py  __main__.py
clincast/core/: engine.py  vectorized.py
clincast/core/calibration/: moments.py  smm.py
clincast/domain/: agents.py  response.py  stocks.py
clincast/ingest/: nct.py  policy.py  protocol.py
clincast/reports/: evidence_pack.py
clincast/scenarios/: __init__.py  alzheimers.py  cardiovascular.py  cns.py  metabolic.py  oncology.py  rare.py
clincast/social/: injection.py
clinfish/: __init__.py  __main__.py
clinfish/core/: engine.py  network.py  vectorized.py
clinfish/core/calibration/: moments.py  smm.py
clinfish/domain/: agents.py  response.py  stocks.py
clinfish/ingest/: nct.py  policy.py
clinfish/reports/: evidence_pack.py
clinfish/scenarios/: __init__.py  alzheimers.py  cardiovascular.py  cns.py  metabolic.py  oncology.py  rare.py
frontend/: package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/compare/: page.tsx
frontend/src/components/layout/: AppShell.tsx  Providers.tsx  TopNav.tsx
frontend/src/lib/: api.ts
tests/: test_behavioral.py  test_calibration.py  test_conservation.py  test_extreme_conditions.py  test_sensitivity.py
(+4 files in other folders)
