[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clinfish"
version = "1.0.0"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
    "networkx>=3.3",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.7",
    "httpx>=0.27",
    "pymupdf>=1.24",
    "charset-normalizer>=3.3",
    "openai>=1.30",
    "anthropic>=0.25",
    "scikit-learn>=1.5",
    "pandas>=2.2",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "ruff>=0.4"]

[project.scripts]
clinfish = "clinfish.__main__:main"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
